--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-cookies": "^1.6.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
