--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "path": "^0.12.7",
     "vue": "^2.6.11",
     "vue-cookies": "^1.6.1",
     "vuex": "^3.1.2"
